Updated formatting again

--- a/JacobLMoore_CV.tex
+++ b/JacobLMoore_CV.tex
@@ -119,6 +119,8 @@
 
 \section{\scshape Education}
 
+\vspace{0.2 cm}
+
 \begin{twocolentry}{Expected 2027}
     \textbf{MS, Georgia Institute of Technology, Computer Science, Computing Systems}
 \end{twocolentry}
@@ -147,6 +149,8 @@
 
 \section{\scshape About Me}
 
+\vspace{0.2 cm}
+
 \begin{onecolentry}
 \begin{tabular}{@{}r l@{}}
 \textbf{Languages} & C++/C, Python \\
@@ -158,6 +162,8 @@
 
 
 \section{\scshape Experience}
+
+\vspace{0.2 cm}
 
 \begin{twocolentry}{05/2023 – Current}
     \textbf{Software Design Engineer, Torch Technologies – Huntsville, AL}
@@ -212,16 +218,18 @@
 
 \section{\scshape Skills}
 
+\vspace{0.2 cm}
+
 \begin{onecolentry}
     \begin{itemize}[leftmargin=0.4 cm]
-        \item Core Software Architecture \& Design
+        \item \textbf{Software Architecture \& Design}
         \begin{itemize}
             \item Object-Oriented Design, Design Patterns (GoF), UML Diagrams
             \item Modular, Plugin-based, \& Layered Architectures
             \item Strong understanding of encapsulation, abstraction, and cohesion principles
         \end{itemize}
 
-        \item Operating Systems \& Systems Programming
+        \item \textbf{Operating Systems \& Systems Programming}
         \begin{itemize}
             \item Proficient in low-level systems programming (C, C++), including manual memory management and concurrency control
             \item Experienced with POSIX APIs for process/thread management and inter-process communication (IPC)
@@ -232,21 +240,21 @@
             \item Secure Coding Practices (CompTIA Security+), Thread Safety
         \end{itemize}
 
-        \item Distributed \& Parallel Computing
+        \item \textbf{Distributed \& Parallel Computing}
         \begin{itemize}
-            \item Microservices Architectures with synchronous (gRPC, custom UDP protocols) and asynchronous (RabbitMQ, pub/sub) messaging
+            \item Microservices/SOA Architectures with synchronous (gRPC, custom UDP protocols) and asynchronous (RabbitMQ, pub/sub) messaging
             \item Network Programming (TCP/UDP sockets) with async for I/O-bound tasks
             \item Logical-Time Synchronization for distributed systems
             \item Parallelization Techniques (OpenMP, MPI) and Performance Tuning
         \end{itemize}
 
-        \item Machine Learning Integration
+        \item \textbf{Machine Learning Integration}
         \begin{itemize}
             \item Reinforcement Learning Pipelines (Stable baselines, RLlib)
             \item Deep Learning Frameworks (PyTorch, TensorFlow), ONNX Runtime
         \end{itemize}
 
-        \item Collaboration \& Methodology
+        \item \textbf{Collaboration \& Methodology}
         \begin{itemize}
             \item Agile Practices, CI/CD Pipelines, Git Workflows, Coding Standards (C++ Core Guidelines)
             \item Technical Mentorship, Code Reviews, and Documentation Standards (Doxygen)
@@ -262,6 +270,10 @@
 
 \begin{onecolentry}
     \textbf{Autonomous RC Car}
+\end{onecolentry}
+
+\vspace{0.10 cm}
+\begin{onecolentry}
     \begin{highlights}
         \item Solely engineered the entire software stack for a low-cost, disposable autonomous RC car designed to sweep for and detonate landmines.
         \item Architected a robust ROS 2 pub/sub service-oriented navigation system fusing raw IMU/GPS data for precise Ackermann steering control via electronic speed controllers.
@@ -274,9 +286,13 @@
 
 \begin{onecolentry}
     \textbf{Tiger Language Compiler}
+\end{onecolentry}
+
+\vspace{0.10 cm}
+\begin{onecolentry}
     \begin{highlights}
         \item Designed and implemented a C++ compiler for a functional, ALGOL-like language (Tiger), producing optimized MIPS assembly.
-        \item Incorporated semantic analysis and error checking, optimized three-address code IR, and two register allocation strategies:
+        \item Performed semantic analysis and validation, optimized three-address code IR, and developed two register allocation strategies:
         \begin{itemize}
             \item Chaitin’s Naive Allocation: A simpler, less optimized approach relying on heuristic allocation.
             \item Briggs Optimization: A comprehensive scheme incorporating control-flow and liveness analysis, as well as instruction cost metrics to minimize load/stores and branches.
@@ -289,6 +305,10 @@
 
 \begin{onecolentry}
     \textbf{Before and After Creator}
+\end{onecolentry}
+
+\vspace{0.10 cm}
+\begin{onecolentry}
     \begin{highlights}
         \item Built a locally hosted web application leveraging unsupervised ML and deep learning to match before/after car detailing images.
         \item Automated bulk image processing, generating side-by-side collages for a detailing business, improving workflow efficiency and consistency.
